test/type/wrong/hm4a.kk
fun f( g : int -> int ) { }

fun main() {
	f({1})
}
